Moved Encoding configuration
Moved Encoding configuration